--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   ],
   "main": "index.js",
   "scripts": {
-    "start": "node index"
+    "start": "node index",
+    "lint": "eslint ."
   },
   "author": "Daniel Tian <dftian@gmail.com>",
   "license": "MIT",
@@ -23,5 +24,8 @@
     "config": "^1.26.1",
     "eazy-logger": "^3.0.2",
     "glob": "^7.1.2"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0"
   }
 }
