--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,13 @@
     "node": true
   },
   "extends": "eslint:recommended",
+  "parserOptions": {
+      "sourceType": "module"
+  },
   "rules": {
     "indent": [
       "error",
       2
-    ],
-    "linebreak-style": [
-      "error",
-      "windows"
     ],
     "quotes": [
       "error",
